z-index issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
 	color: white;
 }
 
+nav{z-index: 9999;}
+
 @media screen and (min-width: 320px) {}
 
 @media screen and (min-width: 480px) {}
@@ -80,6 +82,8 @@
 	#tag h3{
 		font-size: 32px;
 	}
+
+	#content{z-index: 0;}
 
 	section{
 		margin: 0;
